[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/open_sans_condensed/open_sans_condensed_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://words.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/235754__elliotlp__crumple-dry-leaf-2.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 520, 32 )

[node name="Words" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="LineEdit" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0
grow_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_right = -32.0
margin_bottom = -32.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 512, 632 )
shape = SubResource( 1 )

[node name="LeafCrumple" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
